# OpenIsolation

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  cursor1.cur  resource.h
.github/workflows/: build-cmake.yml
Artwork/: OpenIsolation_Logo.xcf  OpenIsolation_Logo_Banner.xcf  OpenIsolation_Logo_Banner_Doxygen.xcf
Documentation/: AlienIsolation_General_ReversingGuidelines.md  AlienIsolation_General_TechnicalDetails.md  AlienIsolation_iOS_SourceFiles.md  AlienIsolation_iOS_libCAAudio.md
Documentation/CATHODE/: AlienIsolation_iOS_MySetupConstructor.md
Documentation/Renderer/: AlienIsolation_Renderer_RenderPasses.md
Libraries/Havok/: README.md
Source/CALibs/: CMakeLists.txt
Source/CATHODE/: CMakeLists.txt  cathode_commands.cpp  cathode_commands.h  cathode_entity.cpp  cathode_entity.h  cathode_entity_interface.cpp  cathode_entity_interface.h  cathode_entity_manager.cpp  cathode_entity_manager.h  cathode_entity_path.cpp  cathode_entity_path.h  cathode_entity_state.cpp  cathode_entity_state.h  cathode_guid.h  cathode_log.cpp  (+3 more)
Source/engine/: CMakeLists.txt
Source/engine/include/: PostProcessing.h  ReflectionMap.h  StreamFileIn.h  UtilsGraphicsCrossPlatform.h  radiosity.h  radiosity_probe_allocator.h  radiosity_runtime.h  render_passes.h
Source/engine/include/PackedFile/: PackedFileCommon.h  PackedFileReadable.h
Source/engine/include/Settings/: Settings.h
Source/engine/include/Stereo/: StereoManager.h
Source/engine/include/pc/: pc_cmdline_options.h  pc_radiosity_runtime.h
Source/engine/source/: PostProcessing.cpp  ReflectionMap.cpp  UtilsGraphicsCrossPlatform.cpp  radiosity.cpp  render_passes.cpp
Source/engine/source/PackedFile/: PackedFileCommon.cpp  PackedFileReadable.cpp
Source/engine/source/Stereo/: StereoManager.cpp
Source/game/common/: CMakeLists.txt
Source/game/common/include/: common_struct_conversion.h
Source/game/common/include/Utils/: common_file_interface.h  common_game_time.h  dictionary.h
Source/game/common/source/Utils/: common_file_interface.cpp  common_game_time.cpp  dictionary.cpp
(+33 files in other folders)
